# algorithms-

./: README.md  pyproject.toml
interview/: task_1.py
src/chapter_1/: binary_search.py
